--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,24 @@
     <string name="status_update">Actualizando estado %1$s en %2$s</string>
     <string name="app_id">1473019672945911</string>
     <string name="get_started">Para iniciar, log en Facebook</string>
+    <string name="spinner_carrera" >Elige tu Carrera...</string>
+    <string name="spinner_escuela" >Elige tu Escuela...</string>
+    <string-array name="opc_carrera">
+        <item>UNAM</item>
+        <item>IPN</item>
+        <item>UAM</item>
+        <item>UNEM</item>
+        <item>UAEM</item>
+        <item>otra</item>
+        <item>Selecciona tu Carrera</item>
+    </string-array>
+    <string-array name="opc_escuela">
+        <item>Ingeniería en computación</item>
+        <item>Ciencias de la computación</item>
+        <item>Informática</item>
+        <item>otra</item>
+        <item>Selecciona tu Escuela</item>
+    </string-array>
+
 
 </resources>
